@@ -12,6 +12,8 @@ contributing to this release.
 
 - I/O Error on First Save Attempt (#3574500 Jarek Czekalski) 
 
+- Fixed whole word search (#3551515 Matthieu Casanova)
+
 - Fixed a number of scrollbar bugs related to undo, multiline cut,
   soft-wrap, and folding.
   (Patch#3567959, Bugs #2832769, #2998294, and #3193168 - Thomas Meyer)
